1998-11-24  Dominik Vogt  <dominik_vogt@hp.com>

        * fvwm/windows.c (do_windowList): applied alt-tab patch by Tim Phipps

1998-11-24  Paul D. Smith  <psmith@gnu.org>

	* fvwm/functions.c (FindBuiltinFunction): Cast the return value
	for systems where bsearch() isn't declared to return void*.

	* acconfig.h: Include malloc.h if it's found, and we don't have
	STDC_HEADERS (just in case).

	* libs/ModParse.h (LFindToken):  Remove this macro.  It's not
	used, and it uses a non-standard function lfind().  Best to not
	use it at all.
	(search.h): Removed #include.

1998-11-24  Dan Espen  <dane@mk.bellcore.com>

	*   fvwm/builtins.c  (SetColorLimit):  Check    return  code  from
 	GetIntegerArguments not equal 1 for arg parse failure test.

1998-11-24  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/virtual.c (checkPanFrames): made sure appropriate pan frames
	are visible (Tim Phipps)

	* fvwm/fvwm.h: cleaned up some pan frame stuff (Tim Phipps)

	* fvwm/add_window.c (AddWindow):
	applied border width patch by Tim Phipps

	* fvwm/builtins.c (SetDeskSize):
	replaced GetTwoArguments with GetIntegerArguments and
	GetRectangleArguments, some cleanup
	(movecursor): rewrote function to get consistent behaviour.

	* fvwm/builtins.c (SetEdgeResistance):
	* fvwm/virtual.c (goto_page_func):
	* fvwm/move.c (move_window_doit):
	replaced GetTwoArguments with GetIntegerArguments

	* fvwm/misc.c:
	* fvwm/misc.h:
	* libs/Parse.c:
	* libs/fvwmlib.h:
	moved GetOneArgument and GetTwoArguments to libs/Parse.c and renamed
	them to Get...PercentArgument(s). GetTwoArguments remains as a wrapper
	to GetTwoPercentArguments. Added GetRectangleArguments function.

1998-11-23  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/misc.c (GetOneArgument): rewrote function to do something
	useful

	* fvwm/builtins.c (DirectionFunc): applied patch for better scoring
	funtion.

	* fvwm/builtins.c (iconify_function):
	(SetClick):
	(SetColorLimit):
	(SetSnapAttraction):
	(SetOpaque):