@@ -1,3 +1,7 @@
+1998-11-26  Dominik Vogt  <dominik_vogt@hp.com>
+
+	* fvwm/builtins.c (DirectionFunc): fixed coredump (empty direction)
+
 1998-11-24  Dominik Vogt  <dominik_vogt@hp.com>
 
         * fvwm/windows.c (do_windowList): applied alt-tab patch by Tim Phipps
